--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <title>JS Small Projects</title>
 </head>
 <body>
+
+  <!--Header-->
+
   <header>
 
     <div class="description">
@@ -26,5 +29,17 @@
     </div>
 
   </header>
+
+    <!--Mission-->
+
+  <section class="mission-container">
+
+    <div class="mission-description">
+      <p>Hola soy Isai, El objetivo de esta pagina web es crear 100 o mas proyectos utilizando HTML, CSS y JavaScript para practicar y mejorar como programador front end.</p>
+      <img src="images/profile-photo.webp" alt="Isai photo" width="180" height="150">
+    </div>
+    
+  </section>
+
 </body>
 </html>
