add projects grid container and images

--- a/index.html
+++ b/index.html
@@ -36,9 +36,29 @@
 
     <div class="mission-description">
       <p>Hola soy Isai, El objetivo de esta pagina web es crear 100 o mas proyectos utilizando HTML, CSS y JavaScript para practicar y mejorar como programador front end.</p>
-      <img src="images/profile-photo.webp" alt="Isai photo" width="180" height="150">
+      <img src="images/profile-photo.webp" alt="Isai photo" width="150" height="150">
     </div>
     
+  </section>
+
+  <!--Projects-->
+
+  <section class="projects-container">
+    <h1>Projects</h1>
+
+    <div class="projects">
+      <div>
+        <a href="subscribe-button-and-shipping-calculator/index.html"><img src="images/projects-images/project-1.webp" alt="project 1"></a>
+      </div>
+
+      <div>
+        <a href="responsive-navbar/index.html"><img src="images/projects-images/project-2.webp" alt="project 2"></a>
+      </div>
+
+      <div>
+        <a href="rock-paper-scissors/index.html"><img src="images/projects-images/project-3.webp" alt="project 3"></a>
+      </div>
+    </div>
   </section>
 
 </body>
