--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Dirt&display=swap" rel="stylesheet">
+  <!--Boostrap Icons-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!--CSS-->
   <link rel="stylesheet" href="style.css">
   <!--Title-->
@@ -49,17 +51,46 @@
     <div class="projects">
       <div>
         <a href="subscribe-button-and-shipping-calculator/index.html"><img src="images/projects-images/project-1.webp" alt="project 1"></a>
+        
+        <div class="project-description">
+          <p>Este proyecto es una pagina web que contiene un botón de subscription de YouTube y una calculador de shipping simulado a la que vemos en Amazon.</p>
+          
+          <div class="link-icons">
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
+            <a href="#"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
+          </div>
+        </div>
       </div>
 
       <div>
         <a href="responsive-navbar/index.html"><img src="images/projects-images/project-2.webp" alt="project 2"></a>
+
+        <div class="project-description">
+          <p>Este proyecto es una pagina web que contiene un navbar responsive que se adapta a cualquier dispositivo.</p>
+
+          <div class="link-icons">
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
+            <a href="#"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
+          </div>
+        </div>
       </div>
 
       <div>
         <a href="rock-paper-scissors/index.html"><img src="images/projects-images/project-3.webp" alt="project 3"></a>
+
+        <div class="project-description">
+          <p>Este proyecto es un juego de piedra, papel o tijera en el que puedes jugar contra la computadora.</p>
+
+          <div class="link-icons">
+            <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
+            <a href="#"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
 </body>
 </html>
+
+<!--To do: Change bottoms background-->
