update projects (project-description and link-icons)

--- a/index.html
+++ b/index.html
@@ -49,44 +49,46 @@
     <h1>Projects</h1>
 
     <div class="projects">
+
       <div>
-        <a href="subscribe-button-and-shipping-calculator/index.html"><img src="images/projects-images/project-1.webp" alt="project 1"></a>
+        <a href="subscribe-button-and-shipping-calculator/index.html" target="_blank"><img src="images/projects-images/project-1.webp" alt="project 1"></a>
         
         <div class="project-description">
           <p>Este proyecto es una pagina web que contiene un botón de subscription de YouTube y una calculador de shipping simulado a la que vemos en Amazon.</p>
-          
-          <div class="link-icons">
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
-            <a href="#"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
-          </div>
+        </div>
+
+        <div class="link-icons">
+          <a href="https://github.com/isai-torres/js-small-projects/tree/main/subscribe-button-and-shipping-calculator" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
+          <a href="subscribe-button-and-shipping-calculator/index.html" target="_blank"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
         </div>
       </div>
 
       <div>
-        <a href="responsive-navbar/index.html"><img src="images/projects-images/project-2.webp" alt="project 2"></a>
+        <a href="responsive-navbar/index.html" target="_blank"><img src="images/projects-images/project-2.webp" alt="project 2"></a>
 
         <div class="project-description">
           <p>Este proyecto es una pagina web que contiene un navbar responsive que se adapta a cualquier dispositivo.</p>
+        </div>
 
-          <div class="link-icons">
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
-            <a href="#"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
-          </div>
+        <div class="link-icons">
+          <a href="https://github.com/isai-torres/js-small-projects/tree/main/responsive-navbar" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
+          <a href="responsive-navbar/index.html" target="_blank"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
         </div>
       </div>
 
       <div>
-        <a href="rock-paper-scissors/index.html"><img src="images/projects-images/project-3.webp" alt="project 3"></a>
+        <a href="rock-paper-scissors/index.html" target="_blank"><img src="images/projects-images/project-3.webp" alt="project 3"></a>
 
         <div class="project-description">
           <p>Este proyecto es un juego de piedra, papel o tijera en el que puedes jugar contra la computadora.</p>
+        </div>
 
-          <div class="link-icons">
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
-            <a href="#"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
-          </div>
+        <div class="link-icons">
+          <a href="https://github.com/isai-torres/js-small-projects/tree/main/rock-paper-scissors" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
+          <a href="rock-paper-scissors/index.html" target="_blank"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
         </div>
       </div>
+
     </div>
   </section>
 
