update  link-icons-container

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <p>Este proyecto es una pagina web que contiene un botón de subscription de YouTube y una calculador de shipping simulado a la que vemos en Amazon.</p>
         </div>
 
-        <div class="link-icons">
-          <a href="https://github.com/isai-torres/js-small-projects/tree/main/subscribe-button-and-shipping-calculator" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
-          <a href="subscribe-button-and-shipping-calculator/index.html" target="_blank"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
+        <div class="link-icons-container">
+          <a class="github-link" href="https://github.com/isai-torres/js-small-projects/tree/main/subscribe-button-and-shipping-calculator" target="_blank" rel="noopener noreferrer"><i class="bi bi-github github-icon"></i><span class="icon-text">Código</span></a>
+          <a class="demo-link" href="subscribe-button-and-shipping-calculator/index.html" target="_blank"><i class="bi bi-laptop demo-icon"></i><span class="icon-text">Demo</span></a>
         </div>
       </div>
 
@@ -70,9 +70,9 @@
           <p>Este proyecto es una pagina web que contiene un navbar responsive que se adapta a cualquier dispositivo.</p>
         </div>
 
-        <div class="link-icons">
-          <a href="https://github.com/isai-torres/js-small-projects/tree/main/responsive-navbar" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
-          <a href="responsive-navbar/index.html" target="_blank"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
+        <div class="link-icons-container">
+          <a class="github-link" href="https://github.com/isai-torres/js-small-projects/tree/main/responsive-navbar" target="_blank" rel="noopener noreferrer"><i class="bi bi-github github-icon"></i><span class="icon-text">Código</span></a>
+          <a class="demo-link" href="responsive-navbar/index.html" target="_blank"><i class="bi bi-laptop demo-icon"></i><span class="icon-text">Demo</span></a>
         </div>
       </div>
 
@@ -83,9 +83,9 @@
           <p>Este proyecto es un juego de piedra, papel o tijera en el que puedes jugar contra la computadora.</p>
         </div>
 
-        <div class="link-icons">
-          <a href="https://github.com/isai-torres/js-small-projects/tree/main/rock-paper-scissors" target="_blank" rel="noopener noreferrer"><i class="bi bi-github icon"></i><span class="icon-text">Código</span></a>
-          <a href="rock-paper-scissors/index.html" target="_blank"><i class="bi bi-laptop icon"></i><span class="icon-text">Demo</span></a>
+        <div class="link-icons-container">
+          <a class="github-link" href="https://github.com/isai-torres/js-small-projects/tree/main/rock-paper-scissors" target="_blank" rel="noopener noreferrer"><i class="bi bi-github github-icon"></i><span class="icon-text">Código</span></a>
+          <a class="demo-link" href="rock-paper-scissors/index.html" target="_blank"><i class="bi bi-laptop demo-icon"></i><span class="icon-text">Demo</span></a>
         </div>
       </div>
 
