improve responsive design (main page)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
   <!--Projects-->
 
   <section class="projects-container">
-    <h1>Projects</h1>
 
     <div class="projects">
 
@@ -54,7 +53,7 @@
         <a href="subscribe-button-and-shipping-calculator/index.html" target="_blank"><img src="images/projects-images/project-1.webp" alt="project 1"></a>
         
         <div class="project-description">
-          <p>Este proyecto es una pagina web que contiene un botón de subscription de YouTube y una calculador de shipping simulado a la que vemos en Amazon.</p>
+          <p>Este proyecto contiene un botón de subscription de YouTube y un calculador de shipping.</p>
         </div>
 
         <div class="link-icons-container">
